--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ seaborn==0.11.0
 ppscore==1.1.1
 plotly==4.14.1
 plotly-express==0.4.1
+requests @ file:///tmp/build/80754af9/requests_1606691187061/work
+requests-oauthlib==1.3.0
+urllib3 @ file:///tmp/build/80754af9/urllib3_1603305693037/work
